--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,8 +4,8 @@ name: Build Docker Image
 # push tag 时触发执行
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - master
 
 # 定义环境变量, 后面会使用
 # 定义 APP_NAME 用于 docker build-args
